package(default_visibility = ["//visibility:public"])

common_copts = [
    "-std=c++17",
    "-O3",
    "-g",
    "-Wall",
    "-Wextra",
    "-Werror",
]

cc_library(
    name = "starter-cpp",
    hdrs = glob([
        "include/starter-cpp/*.h",
    ]),
    copts = common_copts,
    includes = [
        "include",
    ],
)

cc_test(
    name = "unittest",
    srcs = glob([
        "test/*_test.cc",
    ]),
    copts = common_copts + [
        "-fno-access-control",
    ],
    deps = [
        ":starter-cpp",
        "@gtest//:gtest_main",
        "@snapshot",
    ],
)

cc_binary(
    name = "benchmark",
    srcs = glob([
        "test/*_benchmark.cc",
    ]),
    copts = common_copts,
    deps = [
        ":starter-cpp",
        "@google_benchmark//:benchmark_main",
    ],
)
